src/components/Collapse/style.scss
/***** COLLAPSE *****/

.collapse {
  margin-bottom: 2rem;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;

  .collapse-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 1rem 0.5rem 0.75rem;
    background-color: #ff6060;
    cursor: pointer;

    h3 {
      margin: 0;
      color: #ffffff;
      font-size: 22px;
      line-height: 34px;
    }

    .chevron {
      width: 24px;
      height: 24px;
      transform: rotate(0deg);
      transition: transform 0.3s ease;

      &.down {
        transform: rotate(-180deg);
      }
    }
  }

  .collapse-content {
    max-height: 0;
    opacity: 0;
    background-color: rgba(246, 246, 246, 0.45);
    transition:
      max-height 0.8s ease,
      opacity 0.4s ease;
    padding: 0 1rem;
    overflow: hidden;

    p,
    ul {
      margin: 0;
      padding: 1rem 0;
    }

    ul {
      list-style: none;
    }
  }

  &.open .collapse-content {
    max-height: 200px;
    opacity: 1;
  }
}

/*** MEDIA QUERIES ***/

/* (768PX AND LESS TABLET) */
@media (max-width: 768px) {
  .collapse {
    margin-bottom: 1.5rem;
    .collapse-header {
      padding: 0.375rem 0.75rem 0.375rem 0.75rem;

      h3 {
        font-size: 13px;
        line-height: 18px;
      }

      .chevron {
        width: 16px;
        height: 16px;
      }
    }

    .collapse-content {
      p,
      ul {
        font-size: 12px;
      }
    }

    &.open .collapse-content {
      max-height: 260px;
    }
  }
}

